# rustynets

./: .gitattributes  .gitignore  Cargo.toml  README.md  bench2.py  benchmark.py  big_wordlist.txt  debug_response.html  fix.py  fuzz.py  get-fresh-session.sh  httptest.py  rust_test.py  rustnet.py  security_scan_results.json  test.py  test.txt
Sanity_Checks/: auth.sh  diagnose-sqli.sh  diagnose.sh  fuzz-and-scan.sh  fuzz.py  recursive-fuzz.sh
payloads/: dvwa-payloads.yaml  mssql-payloads.yaml  mysql-payloads.yaml  oracle-payloads.yaml  postgres-payloads.yaml  sql-payloads.yaml
src/: bruteforce.rs  dig.rs  error.rs  fuzz.rs  http.rs  lib.rs  main.rs  main.rs.backup  xss.rs
src/sqli/: config.rs  crawler.rs  error.rs  heuristics.rs  http_client.rs  mod.rs  tester.rs  types.rs
