[package]
name = "netool"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance network security scanner with HTTP analysis and vulnerability detection"
license = "MIT"
repository = "https://github.com/yourusername/netool"
keywords = ["security", "http", "scanner", "network", "vulnerability"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "netool"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "netool"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client with redirect support
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }

# URL parsing
url = "2.5"

# DNS resolution
trust-dns-resolver = "0.23"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Date/time handling
chrono = "0.4"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# JSON serialization for output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Testing with mock HTTP server
wiremock = "0.6"

# Property-based testing
proptest = "1.4"

# Async test utilities
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = ["python"]
python = ["pyo3", "pyo3-asyncio"]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1


[package.metadata.maturin]
name = "netool"
python-source = "python"
module-name = "netool"

# Minimum supported Rust version
rust-version = "1.70"