[package]
name = "netool"
version = "2.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Comprehensive network operations and security testing tool"
license = "MIT"
repository = "https://github.com/yourusername/netool"
readme = "README.md"
keywords = ["network", "security", "dns", "http", "pentesting"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "netool"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "netool"
path = "src/main.rs"

[dependencies]
# DNS Resolution (IMPORTANT: Use hickory-resolver, NOT trust-dns-resolver)
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI Argument Parsing
clap = { version = "4.5", features = ["derive"] }

# Date/Time
chrono = "0.4"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2.5"
regex = "1.10"
urlencoding = "2.1"
md5 = "0.8.0"

# HTML Parsing
scraper = "0.20"

# Python Bindings (Optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# UUID with v4 feature (single, authoritative declaration)
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = []
python = ["pyo3", "pyo3-asyncio"]  # Add this line